# geometry

./: .gitignore  AGENTS.md  CMakeLists.txt  FUTURE.md  LICENSE  README.md  init_submodules.sh  spec_test.c
examples/: minimal.cpp
include/assembly_backend/: core.h  memory_ops.h  speculative.h  thread_ops.h
include/assembly_backend/simd/: execnexus.h  memory_intrinsics.h  simd_config.h  simd_types.h
include/geometry/: auxin_diffusion.h  complex_numbers.h  cross_process_api.h  dag.h  dec.hpp  differentiator.h  double_buffer.h  encoding_primitives.h  envelopes.h  execution_graph.h  fft.h  geometry.hpp  granular_domain.hpp  graph_ops.h  graph_ops_bitfield.h  graph_ops_boolean.h  graph_ops_bytefield.h  graph_ops_complex.h  graph_ops_complex_double.h  graph_ops_custom.h  graph_ops_dictionary.h  graph_ops_double.h  graph_ops_edge.h  graph_ops_emergence.h  graph_ops_encoding_engine.h  graph_ops_float.h  graph_ops_genealogy.h  graph_ops_guardian.h  graph_ops_handler.h  graph_ops_heap.h  graph_ops_int.h  graph_ops_linked_list.h  graph_ops_list.h  graph_ops_map.h  graph_ops_memory_map.h  graph_ops_memory_token.h  graph_ops_message.h  graph_ops_node.h  graph_ops_object_set.h  graph_ops_parallel_list.h  (+57 more)
include/simd/: simd_dispatch.h  simd_impl_common.h
src/assembly_backend/: core.c  decode.s  encode.s  init.c  memory_ops.c  speculative.c  thread_ops.c
src/assembly_backend/matmulmemorydistribution/: batched_optimizer.py  matmulmemorymetrics.py  optimizer.py  optimizer2.py  optimizer3.py  optimizer4.py  ordersolver.py
src/assembly_backend/simd/: memory_intrinsics.c  simd_dispatch.c  simd_impl_avx2.c  simd_impl_fallback.c  simd_impl_sse2.c
src/geometry/: auxin_diffusion.c  cross_process_api.c  dag.c  dec_toolkit_header.cpp  differentiator.c  envelopes.c  execution_graph.c  fft.c  granular_domain.cpp  graph_ops.c  graph_ops_bitfield.c  graph_ops_boolean.c  graph_ops_bytefield.c  graph_ops_complex.c  graph_ops_complex_double.c  graph_ops_custom.c  graph_ops_dictionary.c  graph_ops_double.c  graph_ops_edge.c  graph_ops_emergence.c  graph_ops_encoding_engine.c  graph_ops_float.c  graph_ops_genealogy.c  graph_ops_guardian.c  graph_ops_handler.c  graph_ops_heap.c  graph_ops_int.c  graph_ops_linked_list.c  graph_ops_list.c  graph_ops_map.c  graph_ops_memory_map.c  graph_ops_memory_token.c  graph_ops_message.c  graph_ops_node.c  graph_ops_object_set.c  graph_ops_parallel_list.c  graph_ops_pattern_palette_stream.c  graph_ops_pointer.c  graph_ops_pointer_token.c  graph_ops_radix_encoding.c  (+47 more)
src/simd/: simd_dispatch.c  simd_impl_avx2.c  simd_impl_fallback.c  simd_impl_sse2.c
tests/: complex_numbers_test.c  graph_ops_handler_test.c  iterative_solver_test.c  linked_list_creation_test.c  utils_test.c
